updating package.json to correct builds

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "express & foundation boilerplate",
+  "name": "expressAndFoundationBoilerplate",
   "version": "0.0.0",
   "private": true,
   "scripts": {
